2009-06-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11368: Ignore ENABLE_INSTALL_TOOL file if it is older than one hour

2009-06-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11377: synced extJs resources with extJs 3.0RC2, removed skins and unused css/images

2009-06-22  Sebastian Kurfürst <sebastian@typo3.org>

	* Included up-to date Extbase and Fluid (revision 844, before it was 680). Lots of changes during the last development period starting at the developer days. 

2009-06-22  Steffen Kamper  <info@sk-typo3.de>

	* Replaced icon #11371: The current clear page cache icon is ugly and unclear (thanks to Uschi Renzihausen)

2009-06-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11372: Template-Analyzer uses hardcoded texts - added localization (thanks to Christopher Stelmaszyk)

2009-06-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #11356: Backend Login News is not templateable

2009-06-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11358: typoLink() perfomance improvement (thanks to Vladimir Podkovanov)

2009-05-18  Benjamin Mack  <benni@typo3.org>

	* Fixed bug / Feature #11293: Login page is not translatable

2009-05-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11009: External Links get prepended with http://typo3 in the RTEhtmlarea in Firefox 3.0.11/3.5b4

2009-06-15  Ingo Renner  <ingo@typo3.org>

	* Updated the caching framework to the according FLOW3 revision 2616

2009-06-15  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #11119: DBAL: Mapping in query does not takes care of remapping "table.field" in a WHERE clause (thanks to Xavier Perseguers)

2009-06-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11275: Bring back the divider CE
	* Fixed bug #11052: Show Warning if memcache is configured but not installed / working on the server

2009-06-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9984: Element Browser window is MUCH too small (thanks to Georg Kuehnberger)